# QuizzTeam

./: CMakeLists.txt  QuizzGame.pro  README.md  game.cpp  game.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  question.cpp  question.h
